kustomize/overlays/production/item-flow/pixta-ffm/deployment_patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffm
  labels:
    app: ffm
    stage: production
  annotations:
    kube-score/ignore: pod-probes
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ffm
      stage: production
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        iam.amazonaws.com/role: arn:aws:iam::045675425505:role/pixtavietnam-production
      labels:
        app: ffm
        stage: production
    spec:
      containers:
        - name: ffm-app
          image: 045675425505.dkr.ecr.ap-northeast-1.amazonaws.com/ffm_app:release-20200824-0900
