kustomize/overlays/production/item-flow/pixta-ffm/service_patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: ffm-svc
spec:
  selector:
    app: ffm
    stage: production
